# rust-webserver-testing

./: Behändigt.md  Cargo.toml  README.md
src/: main.rs  tera_func.rs
src/helpers/: curl_helper.rs  misc_helper.rs  mod.rs
static/: index.html
static/css/: actix-test.css
template/fragment/: weather.html
template/page/: front.html
