[package]
name = "home-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
curl = "0.4.44"
env_logger = "0.10.0"
html-escape = "0.2.13"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sysinfo = "0.28.2"
tera = "1"
